# alpcan

./: .env.example  .env.production.example  .gitignore  CLAUDE.md  Caddyfile  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  Dockerfile.celery  Dockerfile.prod  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_users.py
backend/app/: config.py  main.py  tasks.py
backend/app/agents/: __init__.py  agent01_preprocess.py  agent02_nodule_detection.py  agent03_characterization.py  agent04_growth_tracking.py  agent05_report_generation.py  agent06_ct_quality.py  agent07a_ark.py  agent07b_torchxray.py  agent07c_xraydar.py  agent07d_medrax.py  agent10_cxr_quality.py  base.py
backend/app/api/v1/: auth.py  dicom.py  inference.py  reports.py  router.py  studies.py
backend/app/core/: queue.py  security.py
backend/app/models/: __init__.py  nodule.py  patient.py  report.py  study.py  user.py
backend/app/services/: dicom_service.py  pipeline_bt.py  pipeline_cxr.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_lung_rads.py  test_reports.py  test_studies.py
deploy/: deploy-remote.sh  setup-server.sh  upload-weights.sh
docs/: GITHUB.md  KAGGLE.md  SUNUCU.md
frontend/: Dockerfile.prod  package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dev/: page.tsx
frontend/src/lib/: api.ts  data.ts  hooks.ts  types.ts
ml/: __init__.py
ml/configs/: lung_rads.yaml  models.yaml
ml/evaluation/: __init__.py  ct_char_metrics.csv  ct_char_training_history.csv  ct_seg_metrics.csv  ct_seg_training_history.csv  lung_rads_scoring.py  malignancy_metrics.csv  malignancy_training_history.csv  metrics.py  nb12_pipeline_config.json  nb13_pipeline_config.json  nb14_pipeline_config.json  pipeline_config.json  sample_generations.csv  training_metrics.json
ml/evaluation/nb14_outputs/: rapor_motoru.py  rapor_ozet.csv
ml/inference/: __init__.py  ark_inference.py  base.py  characterization_inference.py  ct_preprocess_inference.py  ct_quality_inference.py  cxr_quality_inference.py  growth_tracking_inference.py  medsam_inference.py  nodule_detection_inference.py  report_generation_inference.py  torchxray_inference.py  xraydar_inference.py
ml/preprocessing/: __init__.py  cxr_transforms.py  dicom_utils.py  lung_segmentation.py
ml/weights/: download.sh
ml/weights/nb12_lora/: adapter_config.json
notebooks/: 01_lidc_idri_exploration.ipynb  02_cxr_pipeline_torchxrayvision.ipynb  03_cxr_pipeline_resnet50.ipynb  03_kernel-metadata.json  04_cxr_pipeline_medsam.ipynb  04_kernel-metadata.json  05_cxr_pipeline_ark_plus.ipynb  05_kernel-metadata.json  06_ct_nodule_segmentation.ipynb  06_kernel-metadata.json  07_ct_nodule_characterization.ipynb  07_kernel-metadata.json  08_cxr_ensemble_pipeline.ipynb  09_ct_pipeline_integration.ipynb  11_nnunet_nodule_segmentation.ipynb  12_turkish_report_llm.ipynb  13_malignancy_classification.ipynb  kernel-metadata.json
notebooks/kaggle_05/: 05_cxr_pipeline_ark_plus.ipynb  kernel-metadata.json
notebooks/kaggle_06/: 06_ct_nodule_segmentation.ipynb  kernel-metadata.json
notebooks/kaggle_07/: 07_ct_nodule_characterization.ipynb  kernel-metadata.json
notebooks/kaggle_08/: kernel-metadata.json
notebooks/kaggle_09/: kernel-metadata.json
notebooks/kaggle_10/: 10_system_performance_report.ipynb  kernel-metadata.json
notebooks/kaggle_11/: kernel-metadata.json
notebooks/kaggle_12/: 12_turkish_report_llm.ipynb  kernel-metadata.json
notebooks/kaggle_13/: 13_malignancy_classification.ipynb  kernel-metadata.json
notebooks/kaggle_14/: 14_reporting_engine.ipynb  kernel-metadata.json
notebooks/outputs/01_lidc_idri/: lidc_nodule_sizes.csv  lidc_nodule_stats.csv
notebooks/outputs/02_cxr_torchxrayvision/: cxr_auc_scores.csv  cxr_label_distribution.csv
notebooks/outputs/03_cxr_resnet50/: cxr_resnet50_auc_scores.csv
notebooks/outputs/04_cxr_medsam/: cxr_medsam_lung_stats.csv  cxr_medsam_segmentation_results.csv  cxr_medsam_summary.csv
notebooks/outputs/05_cxr_ark_plus/: cxr_ark_auc_scores.csv  cxr_ark_comparison.csv
notebooks/utils/: kaggle_sync.sh
orthanc/: Dockerfile  orthanc.json
(+37 files in other folders)
