[project]
name = "alpcan-backend"
version = "0.1.0"
description = "AlpCAN — AI-Powered Lung Cancer Early Detection Platform API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "celery>=5.4.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "pydicom>=2.4.4",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.3.0",
    "monai>=1.3.0",
    "SimpleITK>=2.3.0",
    "nibabel>=5.2.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.13.0",
    "timm>=1.0.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100
