[project]
name = "alpcan-backend"
version = "0.2.0"
description = "AlpCAN — AI-Powered Lung Cancer Early Detection Platform API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sqlalchemy>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "redis>=5.0.0",
    "celery>=5.4.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0,<4.1.0",
    "python-multipart>=0.0.9",
    "pydicom>=2.4.4",
    "httpx>=0.27.0",
    "PyYAML>=6.0",
    "email-validator>=2.1.0",
    "reportlab>=4.2.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.3.0",
    "monai>=1.3.0",
    "SimpleITK>=2.3.0",
    "nibabel>=5.2.0",
    "scikit-learn>=1.4.0",
    "scipy>=1.13.0",
    "numpy>=1.26.0",
    "Pillow>=10.3.0",
    "opencv-python-headless>=4.9.0",
    # timm — smp>=0.3.3 timm>=0.9 gerektirir; Ark+ uyumluluğu ark_inference.py'de handle edilir
    "timm>=0.9.0",
    # TorchXRayVision — DenseNet-121 CXR analizi
    "torchxrayvision>=1.0.0",
    # MedSAM — HuggingFace Segment Anything
    "transformers>=4.40.0",
    # NB06 U-Net segmentasyon
    "segmentation-models-pytorch>=0.3.3",
    # NB07/NB13 model mimarisi
    "torchvision>=0.18.0",
    # NB13 radiomic özellik hesaplama
    "scikit-image>=0.23.0",
    # Albumentations — augmentation (inference transform için)
    "albumentations>=1.4.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "tests*"]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
